--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" />
-  <title>Weather Dashboard</title>
+  <title>Weather App</title>
 </head>
 
 <body>
@@ -57,7 +57,7 @@
       </div>
     </div>
   </div>
-  <script type="module" src="/src/main.ts"></script>
+  <script type="module" src="/client/main.js"></script>
 </body>
 
 </html>
